[EAP6-121] Enable rolling GC logs at start up in standalone scripts for JVMs that support it and improve JDR to capture such rolled and backed up logs